k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: monitoring-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /stats(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-c-svc
                port:
                  number: 3002
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-a-svc
                port:
                  number: 3000
